Close #2 accepting @HugoGiraudel proposition

--- a/list/_implode.scss
+++ b/list/_implode.scss
@@ -1,13 +1,14 @@
 @function implode($list, $glue: '') {
   $_string: '';
-  $_i: 1;
   
-  @while $_i <= length($list) {
-    @if $_i != 1 {
-      $_string: '#{$_string}#{$glue}';
+  @if length($list) > 0 {
+    @for $_i from 1 through length($list) {
+      $_string: $_string + nth($list, $_i);
+      @if $_i != length($list) {
+        $_string: $_string + $glue;
+      }
     }
-    $_string: '#{$_string}#{nth($list, $_i)}';
-    $_i: $_i + 1;
   }
+
   @return $_string;
 }
