Close #4 accepting @HugoGiraudel proposition

--- a/convert/__all.scss
+++ b/convert/__all.scss
@@ -1,28 +1,3 @@
-@import 'to-Hz';
-@import 'to-ch';
-@import 'to-cm';
-@import 'to-deg';
+@import 'to';
 @import 'to-direction';
-@import 'to-dpcm';
-@import 'to-dpi';
-@import 'to-dppx';
-@import 'to-em';
-@import 'to-ex';
-@import 'to-grad';
-@import 'to-in';
-@import 'to-kHz';
-@import 'to-mm';
-@import 'to-ms';
 @import 'to-number';
-@import 'to-pc';
-@import 'to-percent';
-@import 'to-pt';
-@import 'to-px';
-@import 'to-rad';
-@import 'to-rem';
-@import 'to-s';
-@import 'to-turn';
-@import 'to-vh';
-@import 'to-vmax';
-@import 'to-vmin';
-@import 'to-vw';
