--- a/_PlastiCSS.scss
+++ b/_PlastiCSS.scss
@@ -1,5 +1,6 @@
 @import 'control/_all';
 @import 'convert/_all';
+@import 'ease/_all';
 @import 'helper/_all';
 @import 'list/_all';
 @import 'vendor/_all';
