--- a/ease/_ease-linear.scss
+++ b/ease/_ease-linear.scss
@@ -1,10 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 6 mars 2014, 11:53:13
-    Author     : Admin
-*/
-
+@function ease-linear($time, $start, $end, $duration) {
+  @return ($end - $start) / $duration * $time;
+}
