--- a/_PlastiCSS.scss
+++ b/_PlastiCSS.scss
@@ -1,8 +1,8 @@
 @import 'control/_all';
 @import 'convert/_all';
 @import 'ease/_all';
+@import 'function/_all';
 @import 'helper/_all';
-@import 'list/_all';
 @import 'vendor/_all';
 
 @import 'mixin/_all';
