--- a/function/_side.scss
+++ b/function/_side.scss
@@ -1,33 +1,46 @@
 @function side($value, $side) {
+  // Empty value
   @if length($value) == 0  {
     @return null;
   }
 
   @if $side == top {
+    // Return top
     @return nth($value, 1);
   }
 
   @if $side == right {
     @if length($value) > 1 {
+      // Return right
       @return nth($value, 2);
     }
+
+    // Return top
     @return nth($value, 1);
   }
 
   @if $side == bottom {
     @if length($value) > 2 {
+      // Return bottom
       @return nth($value, 3);
     }
+
+    // Return top
     @return nth($value, 1);
   }
 
   @if $side == left {
     @if length($value) > 3 {
+      // Return left
       @return nth($value, 4);
     }
+
     @if length($value) > 1 {
+      // Return right
       @return nth($value, 2);
     }
+
+    // Return top
     @return nth($value, 1);
   }
 
