Add ease to helpers

--- a/helper/ease/_ease.scss
+++ b/helper/ease/_ease.scss
@@ -1,3 +1,11 @@
+@import 'ease-linear';
+@import 'ease-in';
+@import 'ease-out';
+@import 'ease-in-out';
+@import 'ease-in-cubic';
+@import 'ease-out-cubic';
+@import 'ease-in-out-cubic';
+
 @function ease($time, $start, $end, $duration, $function: linear) {
   @if $function == linear {
     @return ease-linear($time, $start, $end, $duration);
