Add map related functions

--- a/control/__all.scss
+++ b/control/__all.scss
@@ -1,6 +1,7 @@
 @import 'is-bool';
 @import 'is-color';
 @import 'is-list';
+@import 'is-map';
 @import 'is-null';
 @import 'is-number';
 @import 'is-relevant';
