--- a/function/__all.scss
+++ b/function/__all.scss
@@ -1,4 +1,8 @@
 @import 'implode';
+@import 'map-find';
+@import 'map-has-path';
+@import 'map-set';
+@import 'map-unset';
 @import 'nth-side';
 @import 'side';
 @import 'slice';
