Add str-last-index function

--- a/function/__all.scss
+++ b/function/__all.scss
@@ -8,6 +8,7 @@
 @import 'side';
 @import 'slice';
 @import 'splice';
+@import 'str-last-index';
 @import 'str-repeat';
 @import 'str-replace';
 @import 'str-reverse';
