Add str-pad function

--- a/function/__all.scss
+++ b/function/__all.scss
@@ -9,6 +9,7 @@
 @import 'slice';
 @import 'splice';
 @import 'str-last-index';
+@import 'str-pad';
 @import 'str-repeat';
 @import 'str-replace';
 @import 'str-reverse';
