--- a/convert/_to.scss
+++ b/convert/_to.scss
@@ -1,6 +1,6 @@
 @function to($unit, $value, $coef: 1, $vertical: null, $horizontal: $coef) {
-  $_units: 1ch 1cm 1deg 1dpcm 1dpi 1dppx 1em 1ex 1grad 1Hz 1in 1kHz 1mm 1ms 1pc 1pt 1px 1rad 1rem 1s 1turn 1vh 1vmax 1vmin 1vw 1%;
-  $_abbrs:  ch  cm  deg  dpcm  dpi  dppx  em  ex  grad  Hz  in  kHz  mm  ms  pc  pt  px  rad  rem  s  turn  vh  vmax  vmin  vw '%';
+  $_units: 1ch 1cm 1deg 1dpcm 1dpi 1dppx 1em 1ex 1grad 1Hz 1in 1kHz 1mm 1ms 1pc 1pt 1px 1rad 1rem 1s 1turn 1vh 1vmax 1vmin 1vw 1% 1rpx;
+  $_abbrs:  ch  cm  deg  dpcm  dpi  dppx  em  ex  grad  Hz  in  kHz  mm  ms  pc  pt  px  rad  rem  s  turn  vh  vmax  vmin  vw '%' rpx;
   $_index: index($_abbrs, $unit);
 
   @if $_index {
